fixed wrapping in pre-tag, some style fixes

--- a/media/css/base.css
+++ b/media/css/base.css
@@ -36,6 +36,10 @@ form {
 	display: inline;
 }
 
+pre {
+	white-space: pre-wrap;
+}
+
 input, button, textarea, .button {
 	display: inline-block;
 	margin-bottom: 5px;
